prover-ray/zkcdriver/testdata/synced/invalid/basic_11.zkc
//error:4:1-2:return r possibly undefined
fn f(x:u32) -> (r:u32) {

}
